better mobile view

--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
             Traveling is my favorite hobby.<br/>
              So far, I’ve been to the USA, Turkey, and Vietnam. I highly recommend Turkey as a travel destination. The natural landscapes are stunning, and the food is especially delicious! Would you like to see some photos from Turkey?
         </p>
-        <div style="display: flex; justify-content: center;">
-            <img style="width: 250px; margin-right: 25px;" src="KakaoTalk_Photo_2024-09-26-16-19-32.jpeg" alt="취미 이미지" class="image">
-            <img style="width: 250px; margin-right: 25px;" src="20231228_152337.jpg" alt="취미 이미지" class="image">
-            <img style="width: 250px;" src="20231223_173641.jpg" alt="취미 이미지" class="image">
+        <div style="display: flex; justify-content: flex-start; align-items: center; width: 90vw; overflow-x: auto; white-space: nowrap; scroll-behavior: smooth;">
+            <img style="width: 250px; margin-right: 25px; display: inline-block;" src="20231228_152337.jpg" alt="취미 이미지" class="image">
+            <img style="width: 250px; margin-right: 25px; display: inline-block;" src="KakaoTalk_Photo_2024-09-26-16-19-32.jpeg" alt="취미 이미지" class="image">
+            <img style="width: 250px; display: inline-block;" src="20231223_173641.jpg" alt="취미 이미지" class="image">
         </div>
+        
         <button onclick="scrollToSection('section4')">Next</button>
     </section>
 
