--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             I have been interested in computer software since high school.<br/>
             So, I graduated from a software specialized high school and entered the computer engineering department.<br/>
             By the way, We don't know how to fix yours computer.<br/>
-            So please don’t ask your Computer Science friends to repair your computers. Haha.
+            So please don’t ask your Computer Science friends to repair your computers. Haha!
         </p>
-        <img src="computer-science.jpeg" alt="컴퓨터 공학 이미지" class="image">
+        <img width="300px" src="computer-science.jpeg" alt="컴퓨터 공학 이미지" class="image">
         <button onclick="scrollToSection('section2')">Next</button>
     </section>
 
@@ -36,7 +36,8 @@
         <h1>My hobby</h1>
         <p>
             One of my hobbies is assembling and repairing computers.<br/>
-            I have assembled and repaired countless computers for people around me. The process of solving software and hardware problems that occur on a computer is fun.
+            I have assembled and repaired countless computers for people around me.
+             The process of solving software and hardware problems that occur on a computer is fun.
         </p>
         <img style="width: 250px;" src="20240615_195507.jpg" alt="취미 이미지" class="image">
         <button onclick="scrollToSection('section3')">Next</button>
@@ -63,9 +64,10 @@
         <h1>What I’ve been most focused on recently.</h1>
         <p>
             Lately, I’ve been focused on designing and developing a mobile app.<br/>
-            I’m working on a mobile app that helps prevent tardiness, and we’re currently in the process of getting it ready for launch. I hope our app can make a positive impact on the world.
+            I’m working on a mobile app that helps prevent tardiness, <br/>and we’re currently in the process of getting it ready for launch.
+            <br/> I hope our app can make a positive impact on the world.
         </p>
-        <img src="focus.jpeg" alt="몰두하고 있는 일 이미지" class="image">
+        <img width="300px" src="focus.jpeg" alt="몰두하고 있는 일 이미지" class="image">
         <button onclick="scrollToSection('intro')">Back to beginning</button>
     </section>
 
